Fixed documentation with libraries